config 시도